SFDCProject/src/objects/Contact_Preferences__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Preferences</relationshipLabel>
        <relationshipName>Contact_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Organization_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Organization Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Channel_Type_Retail__c</field>
                <operation>equals</operation>
                <value>Retail</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner, Direct</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contact Preferences</relationshipLabel>
        <relationshipName>Contact_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Routing__c</fullName>
        <label>Lead Routing</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lock_Assignment__c</fullName>
        <label>Lock Assignment</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Contact Preferences</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Lead_Organization_Location__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Lock_Assignment__c</columns>
        <columns>Lead_Routing__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CP-{000}</displayFormat>
        <label>Contact Preferences Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>